[fix] spacing in square review

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -644,7 +644,7 @@ a.anchor {
 }
 
 .square.reviews .review-author {
-  padding-top: 20px;
+  padding-top: 55px;
 }
 
 
